services/server/k8s/azure/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knockout-server
  namespace: default
  labels:
    app: knockout-server
    environment: production
spec:
  selector:
    app: knockout-server
    environment: production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      name: http
